force-app/main/default/objects/Contact/fields/ContactCardPicture__c.field-meta.xml
<CustomField>
    <fullName>ContactCardPicture__c</fullName>
    <label>Contact Card Picture</label>
    <description>Shepherd-style download path of the avatar ContentVersion most recently uploaded for this Contact. Stamped by Skywave_SaveProfile after a successful avatar upload. Read by the Modern Contact Card LWC on the Skywave Contact record page. Locking the URL into a field (rather than re-resolving from ContentDocumentLink at read time) avoids ambiguity when a Contact has multiple historical avatar uploads.</description>
    <type>Url</type>
</CustomField>