force-app/main/default/objects/Contact/fields/Demo_Session__c.field-meta.xml
<CustomField>
    <fullName>Demo_Session__c</fullName>
    <label>Demo Session</label>
    <description>The Skywave Interactive demo run during which this Contact was created. Stamped by the profile-creation Apex from the active Demo_Session__c. Drives "audience tonight" filter views and Audience_Size__c rollup.</description>
    <type>Lookup</type>
    <referenceTo>Demo_Session__c</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <relationshipLabel>Contacts</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>