force-app/main/default/objects/Contact/fields/Geo_City__c.field-meta.xml
<CustomField>
    <fullName>Geo_City__c</fullName>
    <label>Geo City</label>
    <type>Text</type>
    <length>120</length>
    <description>City from IP geolocation at survey time (ipinfo.io).</description>
</CustomField>