force-app/main/default/objects/Contact/fields/Geo_Country__c.field-meta.xml
<CustomField>
    <fullName>Geo_Country__c</fullName>
    <label>Geo Country</label>
    <type>Text</type>
    <length>80</length>
    <description>Country code from IP geolocation at survey time (ipinfo.io).</description>
</CustomField>