force-app/main/default/objects/Contact/fields/Geo_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Geo_Latitude__c</fullName>
    <label>Geo Latitude</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>6</scale>
    <description>Latitude from IP geolocation (ipinfo.io loc). Also feeds the demo-monitor globe.</description>
</CustomField>