force-app/main/default/objects/Contact/fields/Geo_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Geo_Longitude__c</fullName>
    <label>Geo Longitude</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>6</scale>
    <description>Longitude from IP geolocation (ipinfo.io loc). Also feeds the demo-monitor globe.</description>
</CustomField>