force-app/main/default/objects/Contact/fields/Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Region__c</fullName>
    <label>Geo Region</label>
    <type>Text</type>
    <length>120</length>
    <description>Region/state from IP geolocation at survey time (ipinfo.io).</description>
</CustomField>