force-app/main/default/objects/Contact/fields/Home_Airport__c.field-meta.xml
<CustomField>
    <fullName>Home_Airport__c</fullName>
    <label>Home Airport</label>
    <type>Text</type>
    <length>3</length>
    <description>Nearest Skywave network airport (IATA) derived from geo lat/lon. The chat agent uses it as the default booking origin.</description>
</CustomField>