force-app/main/default/objects/Contact/fields/Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points__c</fullName>
    <label>Loyalty Points</label>
    <description>Total accumulated loyalty points earned through flight purchases and other qualifying activities</description>
    <inlineHelpText>Current loyalty points balance. Points can be redeemed for upgrades, free flights, and other rewards.</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>