force-app/main/default/objects/Contact/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <description>Unique membership identifier assigned to the customer for their loyalty program account</description>
    <inlineHelpText>Enter the customer's unique membership number (e.g., SKY0001234). This number is used to track loyalty benefits and points.</inlineHelpText>
    <type>Text</type>
    <length>10</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>