force-app/main/default/objects/Contact/fields/Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date__c</fullName>
    <label>Membership Start Date</label>
    <description>The date when the customer joined the loyalty program</description>
    <inlineHelpText>The date this customer enrolled in the Skywave Airlines loyalty program. Used to calculate membership tenure and anniversary benefits.</inlineHelpText>
    <type>Date</type>
</CustomField>