force-app/main/default/objects/Contact/fields/Membership_Tier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Tier__c</fullName>
    <label>Membership Tier</label>
    <description>The customer's loyalty membership tier level, which determines rebooking policies, change fees, and upgrade eligibility</description>
    <inlineHelpText>Select the customer's current membership tier. Higher tiers receive benefits such as free changes, priority boarding, and complimentary upgrades.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>