force-app/main/default/objects/Contact/fields/Phone_Digits__c.field-meta.xml
<CustomField>
    <fullName>Phone_Digits__c</fullName>
    <description>Contact.Phone reduced to digits only, maintained by the Skywave_ContactPhoneDigits trigger (insert and update). Lets the voice caller-resolver match a free-text-entered phone against the inbound caller ID on trailing digits, regardless of formatting.</description>
    <label>Phone Digits</label>
    <length>40</length>
    <type>Text</type>
</CustomField>