force-app/main/default/objects/Contact/fields/Profile_Completed__c.field-meta.xml
<CustomField>
    <fullName>Profile_Completed__c</fullName>
    <label>Profile Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True once the visitor's profile (FirstName, LastName, Email) has been written via the Skywave profile-form pipeline. Persists across chat sessions so a returning visitor skips the form on subsequent bookings.</description>
</CustomField>