force-app/main/default/objects/Contact/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <description>Per-phone UUID minted at QR scan. Travels on every anonymous signal (survey via Interactions SDK, race telemetry) into Data Cloud DLOs and is written here at profile creation. The join key for live SOQL into Data Cloud — see SKYWAVE_INTERACTIVE_DESIGN.md §5b.</description>
    <type>Text</type>
    <length>64</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>