force-app/main/default/objects/Contact/fields/Skywave_Abandon_Reason__c.field-meta.xml
<CustomField>
    <fullName>Skywave_Abandon_Reason__c</fullName>
    <label>Skywave Abandon Reason</label>
    <description>Short tag describing where the visitor abandoned the modal flow (e.g. survey-q3, post-survey, agent-stage, user-closed). Stamped together with Skywave_Abandoned_At__c.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>