force-app/main/default/objects/Contact/fields/Skywave_Abandoned_At__c.field-meta.xml
<CustomField>
    <fullName>Skywave_Abandoned_At__c</fullName>
    <label>Skywave Abandoned At</label>
    <description>Timestamp at which the website visitor closed the demo modal mid-funnel (post-consent, pre-survey-or-pre-profile). Stamped by /api/website/session/abandon. Null if the visitor either finished the funnel or never reached consent.</description>
    <type>DateTime</type>
</CustomField>