force-app/main/default/objects/Contact/fields/Skywave_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Skywave_Conversation_Id__c</fullName>
    <label>Skywave Conversation Id</label>
    <description>MessagingSession.ConversationId stamped at chat-start so the Skywave_Airlines_Agent's resolver action can look this Contact up by the agent's @MessagingSession.ConversationId linked variable. See SKYWAVE_INTERACTIVE_DESIGN.md Phase 3.</description>
    <type>Text</type>
    <length>64</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>