force-app/main/default/objects/Contact/fields/Skywave_Survey_Json__c.field-meta.xml
<CustomField>
    <fullName>Skywave_Survey_Json__c</fullName>
    <label>Skywave Survey JSON</label>
    <description>Structured JSON of the visitor's survey answers, written when the consumer site's "thanks" screen renders. Map of question_key to {questionText, answerText, answerKey}. Read by Skywave_ResolveSession to seed the Skywave_Airlines_Agent's reasoning context.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>