force-app/main/default/objects/Contact/fields/Skywave_Survey_Summary__c.field-meta.xml
<CustomField>
    <fullName>Skywave_Survey_Summary__c</fullName>
    <label>Skywave Survey Summary</label>
    <description>Natural-language summary of the visitor's survey answers (e.g. "Where would you fly? -&gt; Tokyo; How do you like to travel? -&gt; Business; ..."). Written together with Skywave_Survey_Json__c. Consumed directly by the agent's reasoning instructions.</description>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>