force-app/main/default/objects/Contact/fields/Tracking_Status__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Status__c</fullName>
    <label>Tracking Status</label>
    <description>Provenance of the deviceId sealed into the visitor's Heroku skywave_proof cookie. websdk = real WebSDK anonymous Id (datagraph-linked). synthetic = Heroku-minted UUID because WebSDK was blocked or unavailable. opted_out = visitor explicitly opted out; downstream Data Cloud streaming should skip them. Used by Data Cloud segments to filter to the trackable population.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>websdk</fullName>
                <label>WebSDK</label>
            </value>
            <value>
                <fullName>synthetic</fullName>
                <label>Synthetic</label>
            </value>
            <value>
                <fullName>opted_out</fullName>
                <label>Opted Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>